<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetEasy</string>
    <string name="title_section1">Meet on the Go!</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="meetup_name">Name</string>
    <string name="meetup_desc">Description</string>
     <string name="meetup_dest">Destination</string>
    <string name="meetup_time">Time(hh:mm)</string>
    <string name="meetup_contacts">Add People</string>
    <string name="meetup_creation">Plan a Meet Up</string>
    <string name="meetup_create">Done</string>
    <string name="back">Back</string>
    <string name="title_activity_meet">MeetActivity</string>
    <string name="spinner_title">Invite to Meet</string>

</resources>
