<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meetup_creation" 
        android:textSize="20sp"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="39dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity" >

            <TextView
                android:id="@+id/enter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/meetup_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_enter_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/enter_name"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="17sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/enter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_enter_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/meetup_desc"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_enter_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/enter_description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="17sp" >
            </EditText>

            <TextView
                android:id="@+id/enter_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_enter_description"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/meetup_dest"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_enter_destination"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/enter_destination"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="17sp" >
            </EditText>

            <TextView
                android:id="@+id/enter_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_enter_destination"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/meetup_time"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_enter_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/enter_time"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp" >
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_enter_time"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/meetup_contacts"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_contacts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp" >
                </EditText>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:prompt="@string/spinner_title" />
            </LinearLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/editText_enter_time"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginTop="16dp"
                android:text="@string/meetup_create" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button_register"
                android:layout_alignBottom="@+id/button_register"
                android:layout_alignParentLeft="true"
                android:text="@string/back" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>